--- a/android/lib/build.gradle
+++ b/android/lib/build.gradle
@@ -14,7 +14,7 @@ android {
 
 dependencies {
     compile 'com.facebook.react:react-native:+'
-    compile 'com.android.support:support-v4:+'
+    compile 'com.android.support:support-v4:25.3.0'
     compile 'com.google.android.gms:play-services-location:+'
     compile 'com.github.tony19:logback-android-core:1.1.1-6'
     compile 'com.github.tony19:logback-android-classic:1.1.1-6'
