--- a/android/lib/build.gradle
+++ b/android/lib/build.gradle
@@ -15,7 +15,7 @@ android {
 dependencies {
     compile 'com.facebook.react:react-native:+'
     compile 'com.android.support:support-v4:25.3.0'
-    compile 'com.google.android.gms:play-services-location:+'
+    compile 'com.google.android.gms:play-services-location:10.2.4'
     compile 'com.github.tony19:logback-android-core:1.1.1-6'
     compile 'com.github.tony19:logback-android-classic:1.1.1-6'
     compile 'org.slf4j:slf4j-api:1.7.21'
